--- a/SurucuEhliyeti/SurucuEhliyeti/Resources/IcerikDetay/IcerikDetayViewController.xib
+++ b/SurucuEhliyeti/SurucuEhliyeti/Resources/IcerikDetay/IcerikDetayViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IcerikDetayViewController" customModule="SurucuEhliyeti" customModuleProvider="target">
             <connections>
+                <outlet property="activityInd" destination="MM4-wf-hTH" id="xwL-fD-jv1"/>
                 <outlet property="icerikDetayBolumAciklamasi" destination="02M-Za-VYM" id="Gui-ew-BHD"/>
                 <outlet property="icerikDetayBolumIsmi" destination="n62-jI-Yi3" id="GEm-p3-ZP9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -18,12 +19,12 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ymt-hC-bav">
-                    <rect key="frame" x="16" y="47" width="358" height="221"/>
-                    <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <rect key="frame" x="16" y="47" width="343" height="221"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="221" id="ueH-AM-w4Y"/>
                     </constraints>
@@ -33,7 +34,7 @@
                     </wkWebViewConfiguration>
                 </wkWebView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n62-jI-Yi3">
-                    <rect key="frame" x="16" y="288" width="358" height="34"/>
+                    <rect key="frame" x="16" y="288" width="343" height="34"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="34" id="Rxb-K5-Uz4"/>
                     </constraints>
@@ -42,11 +43,15 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="02M-Za-VYM">
-                    <rect key="frame" x="16" y="330" width="358" height="480"/>
+                    <rect key="frame" x="16" y="330" width="343" height="448"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="MM4-wf-hTH">
+                    <rect key="frame" x="180" y="141" width="15" height="32"/>
+                    <color key="color" systemColor="secondaryLabelColor"/>
+                </activityIndicatorView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -55,7 +60,11 @@
                 <constraint firstItem="ymt-hC-bav" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="7JB-FK-wvU"/>
                 <constraint firstItem="ymt-hC-bav" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="9EY-21-7hT"/>
                 <constraint firstItem="02M-Za-VYM" firstAttribute="top" secondItem="n62-jI-Yi3" secondAttribute="bottom" constant="8" symbolic="YES" id="Gyw-Rm-Tn5"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="MM4-wf-hTH" secondAttribute="trailing" constant="180" id="P3S-9x-hF4"/>
                 <constraint firstItem="n62-jI-Yi3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="R8l-y1-2gK"/>
+                <constraint firstItem="MM4-wf-hTH" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="180" id="UOc-xJ-F0C"/>
+                <constraint firstItem="MM4-wf-hTH" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="94" id="X3x-qM-PRx"/>
+                <constraint firstItem="n62-jI-Yi3" firstAttribute="top" secondItem="MM4-wf-hTH" secondAttribute="bottom" constant="115" id="Z1s-Ha-MAj"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ymt-hC-bav" secondAttribute="trailing" constant="16" id="lhX-3I-AG7"/>
                 <constraint firstItem="02M-Za-VYM" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ni8-JT-X2S"/>
                 <constraint firstItem="02M-Za-VYM" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="okq-Bb-pyM"/>
@@ -66,6 +75,9 @@
         </view>
     </objects>
     <resources>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
