--- a/SurucuEhliyeti/SurucuEhliyeti/View/Cells/IcerikTableViewCell/IcerikTableViewCell.xib
+++ b/SurucuEhliyeti/SurucuEhliyeti/View/Cells/IcerikTableViewCell/IcerikTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IcerikTableViewCell" rowHeight="47" id="KGk-i7-Jjw" customClass="IcerikTableViewCell" customModule="SurucuEhliyeti" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="IcerikTableViewCell" rowHeight="47" id="KGk-i7-Jjw" customClass="IcerikTableViewCell" customModule="SurucuEhliyeti" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="425" height="55"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="425" height="55"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1aQ-mn-nPj">
-                                <rect key="frame" x="8" y="17.333333333333336" width="7.6666666666666679" height="20.333333333333336"/>
+                                <rect key="frame" x="12" y="17.333333333333336" width="7.6666666666666679" height="20.333333333333336"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -29,7 +29,7 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="1aQ-mn-nPj" firstAttribute="leading" secondItem="cZa-KQ-5zK" secondAttribute="leading" constant="8" id="M6b-ue-OVD"/>
+                            <constraint firstItem="1aQ-mn-nPj" firstAttribute="leading" secondItem="cZa-KQ-5zK" secondAttribute="leading" constant="12" id="M6b-ue-OVD"/>
                             <constraint firstItem="1aQ-mn-nPj" firstAttribute="centerY" secondItem="cZa-KQ-5zK" secondAttribute="centerY" id="OpF-zR-ckG"/>
                         </constraints>
                     </view>
