--- a/SurucuEhliyeti/SurucuEhliyeti/Resources/IcerikDetay/IcerikDetayViewController.xib
+++ b/SurucuEhliyeti/SurucuEhliyeti/Resources/IcerikDetay/IcerikDetayViewController.xib
@@ -22,56 +22,81 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ymt-hC-bav">
-                    <rect key="frame" x="16" y="47" width="343" height="221"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TIg-8W-pM4">
+                    <rect key="frame" x="0.0" y="47" width="375" height="765"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qhS-cR-fMy" userLabel="ContentView">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="1500"/>
+                            <subviews>
+                                <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ymt-hC-bav">
+                                    <rect key="frame" x="16" y="32" width="343" height="221"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="221" id="GdW-LC-mF8"/>
+                                    </constraints>
+                                    <wkWebViewConfiguration key="configuration">
+                                        <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                        <wkPreferences key="preferences"/>
+                                    </wkWebViewConfiguration>
+                                </wkWebView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n62-jI-Yi3">
+                                    <rect key="frame" x="16" y="295" width="343" height="26.333333333333314"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="MM4-wf-hTH">
+                                    <rect key="frame" x="180" y="132" width="15" height="20"/>
+                                    <color key="color" systemColor="secondaryLabelColor"/>
+                                </activityIndicatorView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="02M-Za-VYM">
+                                    <rect key="frame" x="16" y="345" width="343" height="1113"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1113" id="ZOt-ni-acT"/>
+                                        <constraint firstAttribute="width" constant="343" id="vgW-ha-mom"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="n62-jI-Yi3" secondAttribute="trailing" constant="16" id="65g-kK-1uC"/>
+                                <constraint firstItem="n62-jI-Yi3" firstAttribute="top" secondItem="ymt-hC-bav" secondAttribute="bottom" constant="42" id="BRH-67-XFv"/>
+                                <constraint firstItem="02M-Za-VYM" firstAttribute="leading" secondItem="qhS-cR-fMy" secondAttribute="leading" constant="16" id="Bf0-86-R73"/>
+                                <constraint firstItem="MM4-wf-hTH" firstAttribute="leading" secondItem="qhS-cR-fMy" secondAttribute="leading" constant="180" id="CvQ-Ml-O4l"/>
+                                <constraint firstAttribute="trailing" secondItem="MM4-wf-hTH" secondAttribute="trailing" constant="180" id="Fmc-eQ-Xzy"/>
+                                <constraint firstAttribute="trailing" secondItem="ymt-hC-bav" secondAttribute="trailing" constant="16" id="KhL-3f-iMp"/>
+                                <constraint firstAttribute="height" constant="1500" id="NuH-XK-sOn"/>
+                                <constraint firstAttribute="trailing" secondItem="02M-Za-VYM" secondAttribute="trailing" constant="16" id="eDK-OR-Ga9"/>
+                                <constraint firstItem="02M-Za-VYM" firstAttribute="top" secondItem="n62-jI-Yi3" secondAttribute="bottom" constant="23.670000000000002" id="eng-5I-cCc"/>
+                                <constraint firstItem="ymt-hC-bav" firstAttribute="top" secondItem="qhS-cR-fMy" secondAttribute="top" constant="32" id="jBd-kl-qrE"/>
+                                <constraint firstItem="n62-jI-Yi3" firstAttribute="leading" secondItem="qhS-cR-fMy" secondAttribute="leading" constant="16" id="m8l-2P-nk6"/>
+                                <constraint firstItem="ymt-hC-bav" firstAttribute="leading" secondItem="qhS-cR-fMy" secondAttribute="leading" constant="16" id="nDZ-gs-BVj"/>
+                                <constraint firstAttribute="bottom" secondItem="02M-Za-VYM" secondAttribute="bottom" constant="42" id="qHh-p2-AZL"/>
+                                <constraint firstItem="MM4-wf-hTH" firstAttribute="top" secondItem="qhS-cR-fMy" secondAttribute="top" constant="132" id="sFz-fp-dx4"/>
+                            </constraints>
+                        </view>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="221" id="ueH-AM-w4Y"/>
+                        <constraint firstAttribute="bottom" secondItem="qhS-cR-fMy" secondAttribute="bottom" id="1Mo-ow-t3l"/>
+                        <constraint firstAttribute="trailing" secondItem="qhS-cR-fMy" secondAttribute="trailing" id="7AQ-Ho-cJw"/>
+                        <constraint firstItem="qhS-cR-fMy" firstAttribute="leading" secondItem="TIg-8W-pM4" secondAttribute="leading" id="Q30-oN-Zep"/>
+                        <constraint firstItem="qhS-cR-fMy" firstAttribute="top" secondItem="TIg-8W-pM4" secondAttribute="top" id="aAq-bq-pvW"/>
                     </constraints>
-                    <wkWebViewConfiguration key="configuration">
-                        <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
-                        <wkPreferences key="preferences"/>
-                    </wkWebViewConfiguration>
-                </wkWebView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n62-jI-Yi3">
-                    <rect key="frame" x="16" y="288" width="343" height="34"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="34" id="Rxb-K5-Uz4"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="02M-Za-VYM">
-                    <rect key="frame" x="16" y="330" width="343" height="448"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="MM4-wf-hTH">
-                    <rect key="frame" x="180" y="141" width="15" height="32"/>
-                    <color key="color" systemColor="secondaryLabelColor"/>
-                </activityIndicatorView>
+                </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="n62-jI-Yi3" secondAttribute="trailing" constant="16" id="06h-7A-93X"/>
-                <constraint firstItem="ymt-hC-bav" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="7JB-FK-wvU"/>
-                <constraint firstItem="ymt-hC-bav" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="9EY-21-7hT"/>
-                <constraint firstItem="02M-Za-VYM" firstAttribute="top" secondItem="n62-jI-Yi3" secondAttribute="bottom" constant="8" symbolic="YES" id="Gyw-Rm-Tn5"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="MM4-wf-hTH" secondAttribute="trailing" constant="180" id="P3S-9x-hF4"/>
-                <constraint firstItem="n62-jI-Yi3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="R8l-y1-2gK"/>
-                <constraint firstItem="MM4-wf-hTH" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="180" id="UOc-xJ-F0C"/>
-                <constraint firstItem="MM4-wf-hTH" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="94" id="X3x-qM-PRx"/>
-                <constraint firstItem="n62-jI-Yi3" firstAttribute="top" secondItem="MM4-wf-hTH" secondAttribute="bottom" constant="115" id="Z1s-Ha-MAj"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ymt-hC-bav" secondAttribute="trailing" constant="16" id="lhX-3I-AG7"/>
-                <constraint firstItem="02M-Za-VYM" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ni8-JT-X2S"/>
-                <constraint firstItem="02M-Za-VYM" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="okq-Bb-pyM"/>
-                <constraint firstItem="n62-jI-Yi3" firstAttribute="top" secondItem="ymt-hC-bav" secondAttribute="bottom" constant="20" id="wjT-fo-I8R"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="02M-Za-VYM" secondAttribute="trailing" constant="16" id="zCT-H2-vwY"/>
+                <constraint firstAttribute="bottom" secondItem="TIg-8W-pM4" secondAttribute="bottom" id="4i1-Hf-VDD"/>
+                <constraint firstItem="qhS-cR-fMy" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="76x-6X-evJ"/>
+                <constraint firstItem="TIg-8W-pM4" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="94H-ns-161"/>
+                <constraint firstItem="TIg-8W-pM4" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="LKA-NN-Jqe"/>
+                <constraint firstItem="TIg-8W-pM4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="zZo-tb-q8i"/>
             </constraints>
-            <point key="canvasLocation" x="130.76923076923077" y="-12.085308056872037"/>
+            <point key="canvasLocation" x="130.40000000000001" y="-12.561576354679804"/>
         </view>
     </objects>
     <resources>
