--- a/SurucuEhliyeti/SurucuEhliyeti/View/Cells/PolisIsaretleriCell/PolisIsaretleriCollectionViewCell.xib
+++ b/SurucuEhliyeti/SurucuEhliyeti/View/Cells/PolisIsaretleriCell/PolisIsaretleriCollectionViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="agpi1" translatesAutoresizingMaskIntoConstraints="NO" id="JoA-ba-DEa">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="JoA-ba-DEa">
                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="JoA-ba-DEa" secondAttribute="height" multiplier="1:1" id="sOL-qz-oUM"/>
@@ -40,6 +40,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="agpi1" width="250" height="250"/>
+        <image name="default" width="600" height="600"/>
     </resources>
 </document>
