--- a/SurucuEhliyeti/SurucuEhliyeti/View/Cells/TrafikIsaretleriCell/TrafikIsaretleriCollectionViewCell.xib
+++ b/SurucuEhliyeti/SurucuEhliyeti/View/Cells/TrafikIsaretleriCell/TrafikIsaretleriCollectionViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IsikliIsaretCihazi" translatesAutoresizingMaskIntoConstraints="NO" id="LLB-we-kRO">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="LLB-we-kRO">
                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -42,6 +42,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="IsikliIsaretCihazi" width="180" height="157"/>
+        <image name="default" width="600" height="600"/>
     </resources>
 </document>
